[package]
name = "eip712_nft_minter"
version = "0.1.0"
edition = "2021"

[dependencies]
ethabi = "6.0"
ethereum-types = "0.4"
failure = "0.1.8"
indexmap = "2.2.6"
itertools = "0.13.0"
keccak-hash = "0.1"
lazy_static = "1.4.0"
lunarity-lexer = "0.1"
once_cell = "1.19.0"
regex = "1.10.5"
rustc-hex = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toolshed = "0.4"
validator = { version = "0.18.1", features = ["derive"] }
hex = "0.4.3"
secp256k1 = { version = "0.29.0", features = ["global-context", "hashes", "recovery"] }
