[package]
name = "eip_712_utils"
version = "0.1.0"
authors = [
  "Marko Bilal <github.com/marko911>",
  "Tommy Harper <github.com/tommyrharper>",
]
edition = "2021"
description = "A Rust library providing utilities for EIP-712 message signing"
license = "MIT"
repository = "https://github.com/Aion-Studio/eip-712-utils"
homepage = "https://github.com/yourusername/eip_712_utils"
documentation = "https://docs.rs/eip_712_utils"
readme = "README.md"
keywords = ["EIP-712", "signing", "crypto", "blockchain"]
categories = ["cryptography", "blockchain", "utilities"]

[dependencies]
ethabi = "6.0"
ethereum-types = "0.4"
failure = "0.1.8"
indexmap = "2.2.6"
itertools = "0.13.0"
keccak-hash = "0.1"
lazy_static = "1.4.0"
lunarity-lexer = "0.1"
once_cell = "1.19.0"
regex = "1.10.5"
rustc-hex = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toolshed = "0.4"
validator = { version = "0.18.1", features = ["derive"] }
hex = "0.4.3"
secp256k1 = { version = "0.29.0", features = [
  "global-context",
  "hashes",
  "recovery",
] }

[lib]
name = "eip_712_utils"
crate-type = ["lib"]
